k8s/observability/kibana/service-kibana.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: observability
spec:
  type: ClusterIP
  selector:
    app: kibana
  ports:
    - port: 5601
      targetPort: 5601
